--- a/estilo.css
+++ b/estilo.css
@@ -159,3 +159,42 @@ body {
 .container-fluid p {
     color: white;
 }
+
+.mosaico img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.section1{
+    display: flex;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 10px;
+    align-items: center;
+}
+
+.subsection p, .subsection h2{
+    text-align: justify;
+    padding: 10px;
+    align-self: center;
+}
+
+
+.grey{
+    background-color: #22222B;
+}
+
+.row .grey{
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    justify-content: center;
+    padding: 30px;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.description{
+    font-size: 1.6rem;
+}
