--- a/estilo.css
+++ b/estilo.css
@@ -67,6 +67,8 @@ body {
     width: 1175px;
     padding: 24px 14px;
     margin: 24px auto;
+    align-items: center;
+    justify-content: center;
 }
 
 .bienvenida h4{
